--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "reset": "rimraf node_modules; deno install --allow-scripts && deno cache --reload main.ts"
   },
   "dependencies": {
-    "helia": "2.1.0"
+    "helia": "^5.4.2"
   },
   "devDependencies": {
     "cpr": "^3.0.1",
